<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SabaVision Sample App</string>
    <string name="keywords">Keywords (optional)</string>
    <string name="load_ad">Load Ad</string>
    <string name="refresh_ad">Refresh Ad</string>
    <string name="switch_layout">Switch Layout</string>
    <string name="show_ad">Show Ad</string>

    <string name="learn_more">Learn More</string>
    <string name="save">Save Ad Unit</string>
    <string name="ad_unit_id">Ad Unit Id:</string>
    <string name="ad_unit_hint">Enter Ad Unit Id</string>
    <string name="ad_unit_name">Name:</string>
    <string name="ad_unit_name_hint">Enter Name</string>
    <string name="ad_type">Ad Type:</string>
    <string name="add_ad_unit_title">Add an Ad Unit</string>
    <string name="add_ad_unit_button">Add an Ad Unit</string>
    <string name="ad_unit_id_banner">20416-mobile_app-b195f8dd8ded45fe847ad89ed1d016da</string>
    <string name="ad_unit_id_interstitial">20416-popup_app-b195f8dd8ded45fe847ad89ed1d016da</string>
    <string name="ad_unit_id_rewarded_video">20416-video_app-b195f8dd8ded45fe847ad89ed1d016da</string>
    <string name="swipe_text"><![CDATA[< Swipe Left & Right >]]></string>

</resources>
